--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
-  },
+  "scripts": { "project": "git subtree push --prefix dist origin gh-pages" },
+
   "author": "",
   "license": "ISC",
   "devDependencies": {
